--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,10 @@ server.servlet.encoding.force=true
 
 # datasource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/guest_db?serverTimezone=UTC&useUniCode=yes&characterEncoding=UTF-8
+#spring.datasource.url=jdbc:mysql://localhost:3306/guest_db?serverTimezone=UTC&useUniCode=yes&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://mysql.cnw8cs4isslh.ap-northeast-2.rds.amazonaws.com:3306/guest_db?serverTimezone=UTC&useUniCode=yes&characterEncoding=UTF-8
 spring.datasource.username=guest
 spring.datasource.password=guest
+
 # mybatis
 mybatis.config-location=classpath:mybatis/configuration.xml
