--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,32 +1,31 @@
-name: Deploy GuestbookApp #워크플로우 이름
+name: Deploy GuestbookApp
 
-on: #이벤트 정의
+on:
   push:
     branches:
-      - master #master로 깃허브에 push되면 작동
-      
-      
+      - master # 또는 프로젝트의 기본 브랜치명
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-        
+
       - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
           java-version: '17'
           distribution: 'temurin'
-          
+
       - name: Build with Maven
         run: mvn clean package
-        
+
       - name: Build Docker image
         run: docker build . -t ryuhaseok/guestbook:latest
-        
+
       - name: Log in to Docker Hub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secret.DOCKER_USERNAME }}" --password-stdin
-        
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
       - name: Push Docker image to Docker Hub
         run: docker push ryuhaseok/guestbook:latest
