--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,10 +4,10 @@ name: Deploy GuestbookApp
 on:
   workflow_dispatch:
 
-on:
-  push:
-    branches:
-      - master # 또는 프로젝트의 기본 브랜치명
+#on:
+#  push:
+#    branches:
+#      - master # 또는 프로젝트의 기본 브랜치명
 
 jobs:
   build-and-deploy:
